--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
+    "reactstrap": "^9.1.10",
     "yup": "^1.2.0"
   },
   "devDependencies": {
