--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@react-icons/all-files": "^4.1.0",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
