--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.4.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.1",
+    "react-router-dom": "^6.13.0",
     "reactstrap": "^9.1.10",
     "yup": "^1.2.0"
   },
