--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.13.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.10",
     "yup": "^1.2.0"
   },
