--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "antd": "^5.5.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.8.0",
