--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@react-icons/all-files": "^4.1.0",
     "antd": "^5.5.1",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.13.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.10",
+    "styles": "^0.2.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
