--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
