New Base URL has been set to available API
All the current API's have been shifted to the base URL.
I cleaned the code of a few files to increase understandability.

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = 'http://18.221.148.248:84/api/v1'
+#USELESS FILE API CHANGES CAN BE DONE IN THE CONFIG FILE 
+REACT_APP_BASE_URL = 'http://13.48.193.17:81/api/v1'
