--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
@@ -23,6 +24,7 @@
     "chart.js": "^4.3.0",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
